Hantera think från deepseek - WIP

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Ai-server</h1>
-    <section></section>
+    <section id="ai-response">
+        <div class="thinking"></div>
+        <article></article>
+    </section>
     <label for="chat-input">Skicka meddelande</label>
     <textarea id="chat-input"></textarea>
     <button>Skicka</button>
