--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" type="module"></script>
     <title>Document</title>
 </head>
 <body>
+
+<ul id="chats"></ul>
+
+<main>
     <h1>Ai-server</h1>
     <section id="ai-response">
         <div class="thinking"></div>
-        <article></article>
+        <article id="conversation"></article>
     </section>
     <label for="chat-input">Skicka meddelande</label>
     <textarea id="chat-input"></textarea>
     <button>Skicka</button>
+</main>
 </body>
 </html>
