Visa tidigare konversation

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 <main>
     <h1>Ai-server</h1>
     <section id="ai-response">
+        <article id="chat-history"></article>
         <div class="thinking"></div>
         <article id="conversation"></article>
     </section>
