Kunna skapa nya chattar

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-
-<ul id="chats"></ul>
+<aside>
+    <button id="new-conversation">New conversation</button>
+    <ul id="chats"></ul>
+</aside>
 
 <main>
     <h1>Ai-server</h1>
@@ -20,7 +22,7 @@
     </section>
     <label for="chat-input">Skicka meddelande</label>
     <textarea id="chat-input"></textarea>
-    <button>Skicka</button>
+    <button id="send-chat">Skicka</button>
 </main>
 </body>
 </html>
